widan-stack.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: mariadb-config
data:
  mariadb-url: db
---
apiVersion: v1
kind: Secret
metadata:
  name: mariadb-secret
type: Opaque
data:
  mariadb-database: d2lkYW5fZGI=
  mariadb-password: d2lkYW4xNg==
---
apiVersion: v1
data:
  .dockerconfigjson: ewoJImF1dGhzIjogewoJCSIxMC4xMC41MS4xNDo4MDgyIjogewoJCQkiYXV0aCI6ICJZV1J0YVc0NmMyRnVaR2x1ZVdGd09Uaz0iCgkJfSwKCQkiMTAuMTAuNTEuMTQ6ODA4MyI6IHsKCQkJImF1dGgiOiAiWVdSdGFXNDZjMkZ1WkdsdWVXRndPVGs9IgoJCX0KCX0KfQ==
kind: Secret
metadata:
  creationTimestamp: "2023-07-14T02:51:33Z"
  name: regcred
  namespace: default
  resourceVersion: "2087"
  uid: cf2ffaf6-7936-428c-acb4-94044eb36b80
type: kubernetes.io/dockerconfigjson
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: 10.10.51.14:8082/kevinmz/widan-waf-db:latest
        ports:
        - containerPort: 3306
        env:
        - name: MARIADB_DATABASE
          valueFrom:
            secretKeyRef:
              name: mariadb-secret
              key: mariadb-database
        - name: MARIADB_ROOT_PASSWORD
          valueFrom:
            secretKeyRef:
              name: mariadb-secret
              key: mariadb-password
      imagePullSecrets:
      - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: 10.10.51.14:8082/app-service:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: 10.10.51.14:8082/auth-service:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  labels:
    app: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: 10.10.51.14:8082/admin-service:latest
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  selector:
    app: admin
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: azem-ingress
spec:
  rules:
    - host: k8s.azem.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /account
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /admin/
            pathType: Prefix
            backend:
              service:
                name: admin-service
                port:
                  number: 80
